--- a/composer.json
+++ b/composer.json
@@ -27,13 +27,13 @@
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
-            "Database\\Seeders\\": "database/seeders/"
+            "Database\\Seeders\\": "database/seeders/",
+            "Brl\\Startup\\": "startup/src/"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "Tests\\": "tests/",
-            "Brl\\Startup\\": "startup/src/"
+            "Tests\\": "tests/"
         }
     },
     "scripts": {
